# agntcy-agentic-apps

./: .dockerignore  .env.example  .gitignore  .pylintrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  MAINTAINERS.md  README.md  SECURITY.md  requirements.txt
.github/: CODEOWNERS
.github/linters/: .pylintrc  black.toml
.github/workflows/: hub_push.yml  lint.yml
api_bridge_agent_demos/: README.md  agent.json
api_bridge_agent_demos/mcp/: README.md  pyproject.toml
api_bridge_agent_demos/mcp/deploy/: api_bridge_mcp_demo_manifest.json
api_bridge_agent_demos/mcp/src/api_bridge_agent_mcp_demo/: __init__.py  main.py
app/: main.py
app/api/routes/: stateless_runs.py
app/core/: config.py  logging_config.py
client/: logging_config.py  rest.py
client/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
email_reviewer/: .env.example  README.md  agent.json  email_reviewer.tmpl.yaml  pyproject.toml  usage_example.py
email_reviewer/deploy/: email_reviewer.json  email_reviewer_example.yaml
email_reviewer/email_reviewer/: __init__.py  email_reviewer.py  generate_manifest.py  state.py
mailcomposer/: README.md  agent.json  langgraph.json  main.py  pyproject.toml
mailcomposer/deploy/: mailcomposer.json  mailcomposer_example.yaml
mailcomposer/mailcomposer/: generate_manifest.py  mailcomposer.py  state.py
marketing-campaign/: README.md  agent.json  pyproject.toml
marketing-campaign/deploy/: marketing-campaign.json  marketing_campaign_example.yaml
marketing-campaign/src/marketing_campaign/: __init__.py  app.py  email_reviewer.py  generate_manifest.py  gradio_ui.py  mailcomposer.py  main_acp_client.py  main_langgraph.py  state.py
network_of_assistants/: README.md  agent.json  pyproject.toml
network_of_assistants/ads/datamodels/: catalyst.json  meraki.json  moderator.json  nexus.json  splunk.json  thousandeyes.json  webex.json
network_of_assistants/agp/: example.py
network_of_assistants/agp/agp/: __init__.py
network_of_assistants/moderator/: README.md  agent.py  evaluator.py  main.py
network_of_assistants/pdf_assistant/: README.md  main.py
network_of_assistants/user_proxy/: README.md  main.py
remote_agent_agp/: README.md  agent.json  docker-compose.yml  requirements.txt  update_req.py
remote_agent_agp/api_client/: agp.py  langgraph.json  logging_config.py
remote_agent_agp/app/: main.py
remote_agent_agp/app/agent/: lg.py  prompts.py
remote_agent_agp/client/: agp.py  langgraph.json  logging_config.py  rest.py
remote_agent_agp/client_studio/: agp.py  langgraph.json  logging_config.py
remote_agent_agp/remote_agent_docker/: Dockerfile  build_docker.ps1  build_docker.sh  run_compose.ps1  run_compose.sh  run_gw_image.ps1  run_gw_image.sh  run_image.ps1  run_image.sh
remote_agent_agp/server/: main.py
remote_agent_ap/: README.md  update_req.py
remote_agent_ap/app/: main.py
remote_agent_ap/client/: rest.py
remote_graphs/: update_req.py
remote_graphs/client/: logging_config.py
testing/weather_vibes_agent/: requirements.txt
tools/: hub-pu.sh
tutorials/01-introduction/: 02-first-agp-client.md  agp-architecture.md
tutorials/02-weather-vibes-agent/: 00-overview.md  01-project-setup.md  02-creating-acp-descriptor.md  03-creating-the-tools.md  04-create-the-agent.md
weather_vibes_agp/: agent.json
weather_vibes_agp/testing/: test_weather_vibes.py
(+47 files in other folders)
