[project]
name = "marketing-campaign"
version = "0.1.1"
description = ""
authors = [
    {name = "Alessandro Duminuco",email = "aduminuc@cisco.com"}
]
readme = "README.md"
requires-python =  ">=3.10.0,<4.0"
dynamic = [ "dependencies" ]

[tool.poetry.dependencies]
python-dotenv = "^1.0.1"
langgraph = "^0.3.5"
langchain-openai = "^0.3.8"
langchain = "^0.3.20"
agntcy-acp = "1.3.2"
gradio = "^5.23.1"

[project.scripts]
ui = "marketing_campaign.gradio_ui:main"

[tool.poetry]
packages = [{include = "marketing_campaign", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
