[project]
name = "network-of-assistants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["pdf_assistant", "agp", "user_proxy", "moderator"]

[dependency-groups]
dev = ["ruff<1.0.0,>=0.9.3"]
